--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ get_filename_component(CMAKE_PREFIX_PATH
 
 set(EXTERNALPROJECT_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/inst)
 
-GetFromEnvironmentOrCache(TAG_OR_BRANCH "master" STRING "The name of the tag or branch to build")
+GetFromEnvironmentOrCache(TAG_OR_BRANCH "uframer-2.5.0" STRING "The name of the tag or branch to build")
 GetFromEnvironmentOrCache(EXTRA_REPOSITORIES "" STRING "Extra repositories to install. Expected to have a CMake based build system. Format is (<project name> <git URL> <cmake configuration options>\;)*")
 
 # Create the version-related variables
